app/assets/stylesheets/welcome.scss
$base-color: #264796;
$link-color: #5167bb;
$btn-link: #0087ca;
$base-color-dark: #122248;
$base-color-paragraph: #6884a7;

$color-success: #008a64;

//content: "✓";

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: $base-color;
  font-family: Poppins, "Segoe UI", Arial, sans-serif;
  font-size: 17px;
  line-height: 1.7;
}

ul {
  list-style-type: none;
  padding: 0;
}

a {
  color: $link-color;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
a:focus {
  text-decoration: underline;
  outline: 3px solid $btn-link;
}

p, ul, ol {
  margin: 0 0 1.7rem;
}

h4 {
  font-size: 1.188rem;
}

input[type=radio], input[type=checkbox] {
  width: 30px;
  height: 30px;
  cursor: pointer;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0; 
}

aside .active {
  color: $base-color-dark;
  border-bottom: 1px solid; 
}

aside .active:hover {
  text-decoration: none;
}

.nav-down {
  background: $base-color-dark;
  height: 80px;
  position: fixed;
  top: 0;
  transition: top 0.2s ease-in-out;
  width: 100%;
  color: #fff;
  z-index: 999;
  opacity: 0.8;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.nav-up {
  top: -40px;
}

@media only screen and (max-width: 960px) {
  .nav-down {
    display: none !important;
  }

  .nav-up {
    display: none !important;
  }
}


.nav-mobile {
  display: none !important;
}

@media only screen and (max-width: 960px) {
  .navbar {
    display: none !important;
  }

  .nav-mobile {
    display: flex !important;
  }
}

.visually-hidden {
  position: absolute !important;
  clip: rect(1px, 1px, 1px, 1px);
  padding: 0 !important;
  border: 0 !important;
  height: 1px !important;
  width: 1px !important;
  overflow: hidden;
}

.visually-hidden:active, .visually-hiddene:focus {
  position: static;
  width: auto;
  height: auto;
  overflow: visible;
  clip: auto;
  white-space: normal;
}

.fa-arrow-right {
  margin-left: 0.3em;
  font-size: 0.7em;
  position: relative;
  top: 0.3ex;
}

.paragraph-blue {
  color: $base-color-paragraph;
}

.base-blue-f {
  color: $base-color;
}

.bb--dotted {
  border-bottom: 3px dotted;
}

.btn {
  -webkit-appearance: none;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: transparent;
  display: inline-block;
  position: relative;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  text-align: center;
  padding: 0.6em 1.2em;
  border: 0;
  border-radius: 4px;
  color: #fff;
  background-color: $base-color;
  box-shadow: rgba(29, 171, 242, 0.3) 0 3px 16px;
  transition: background-color 0.2s ease-out, box-shadow 0.2s ease-out;
}
.btn:hover, .btn:focus {
  text-decoration: underline;
  background-color: $base-color-dark;
  color: $base-color-dark;
  box-shadow: rgba(17, 175, 254, 0.4) 0 3px 20px;
}

@media only screen and (max-width: 481px) {
  .btn {
    padding: 0.5em 0.8em;
    font-size: 0.875em;
  }
}
.btn.reversed {
  color: $base-color;
  border-radius: 0.25rem;
  background-color: #fefdfd;
  box-shadow: rgba(0, 82, 115, 0.15) 0 2px 10px;
  transition: box-shadow 0.3s ease, background-color 0.3s ease, color 0.3s ease, -webkit-transform 0.2s ease;
  transition: box-shadow 0.3s ease, background-color 0.3s ease, transform 0.2s ease, color 0.3s ease;
  transition: box-shadow 0.3s ease, background-color 0.3s ease, transform 0.2s ease, color 0.3s ease, -webkit-transform 0.2s ease;
}

.btn.reversed:hover, .btn.reversed:focus {
  background-color: #fff;
  box-shadow: rgba(0, 92, 129, 0.15) 0 2px 15px;
  color: $base-color-dark;
}

.btn--link {
  color: $link-color;
  background: transparent;
  background-color: transparent;
  padding: 0;
  box-shadow: none;
}
.btn--link:hover {
  background-color: transparent;
  color: $base-color-paragraph;
}
.btn--link:focus, .btn--link:hover {
  text-decoration: underline;
  background-color: transparent;
  color: $base-color-paragraph;
}

.btn--link:hover > span svg {
  color: $base-color-paragraph;
}

.nav-items > a {
  text-decoration: none;
}

.nav-items--dark > a {
  text-decoration: none;
  color: $base-color;
}

.nav-items > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: #fff;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.nav-items > a:hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.nav-items .active:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.nav-items--dark > a:before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: $base-color;
  visibility: hidden;
  -webkit-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transition: all 0.3s ease-in-out 0s;
  transition: all 0.3s ease-in-out 0s;
}

.nav-items--dark > a:hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.nav-items--dark .active:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
  transform: scaleX(1);
}

.navbar-nav > li:not(:last-child) {
  padding-right: 1.8rem;
  white-space: nowrap;
}

.nav-item > a {
  position: relative;
  color: #fff;
  text-decoration: none;
  font-weight: 700;
}
.nav-item > a:hover {
  color: #fff;
}
/* ... */

